fix contrast

--- a/src/conferences/radv/sass/components/_hero.sass
+++ b/src/conferences/radv/sass/components/_hero.sass
@@ -519,6 +519,7 @@
     .hero__btn
       .btn:not(.btn--border)
         background: var(--accentColor)
+        border-color: var(--accentColor)
         color: #000
         &:after,
         &:before
@@ -529,3 +530,6 @@
         &:after,
         &:before
           content: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25.4px" height="11.4px" viewBox="0 0 25.4 11.4" style="enable-background:new 0 0 25.4 11.4;" xml:space="preserve"><polygon fill="%23ffffff" points="19.7,0 18.3,1.4 21.6,4.7 0,4.7 0,6.7 21.6,6.7 18.3,10 19.7,11.4 25.4,5.7"/></svg>')
+
+  .stats__num span:after, .big-day__date span:after
+    background: darken($themeColor, 22%)
